--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -631,6 +631,8 @@ font-size: 100px;
         <td>  dr.nath@nitk.edu.in</td>
         
       </tr>
+    </tbody>
+  </table>
     
 
 <%= render 'faculties/footer' %>
