--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -630,5 +630,7 @@ font-size: 100px;
           <td>  dr.nath@nitk.edu.in</td>
           
         </tr>
+</tbody>
+</table>
 
 <%= render 'faculties/footer' %>
