--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -140,6 +140,13 @@ font-weight: bold;
   justify-content: flex-end;
 }
 
+.card-line {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+
 @media (max-width: 767px) {
 /* Adjust for smaller screens if needed */
 .btn-round {
@@ -187,6 +194,8 @@ font-size: 100px;
           <div class="underline"></div>
         </div>
 
+        <div class="card-line">
+        <div>
         <div class="section-title">
           <h3>Director</h3>
           <div class="underline"></div>
@@ -204,16 +213,20 @@ font-size: 100px;
                 </div>
               </div>
           </div>
-        <br>
-
+          </div>
+          </div>
+          </div>
+        
+          <div class="card-line">
         <!-- Faculty Advisor -->
-        <div class="section-title mt-5">
+        <div>
+        <div class="section-title  mt-5">
           <h3>Professor In-charge</h3>
           <div class="underline"></div>
         </div>
 
         <div class="row justify-content-center">
-            <div class="member d-flex justify-content-center">
+            <div class="member d-flex justify-content-around" style ="max-width:80% !important; max-height:90% !important;">
               <%= image_tag('DrBRC.jpeg', class: 'teampic img-fluid', alt: 'faculty advisor') %>
               <div class="member-info">
                 <h4>Dr. B R Chandavarkar</h4>
@@ -225,7 +238,12 @@ font-size: 100px;
                 </div>
               </div>
             </div>
-        <br>
+          </div>
+        </div>
+       
+        
+          
+          <div>
           <!-- Staff -->
           <div class="section-title mt-5">
             <h3>Staff</h3>
@@ -233,7 +251,7 @@ font-size: 100px;
           </div>
 
           <div class="row justify-content-center">
-            <div class="member d-flex justify-content-center">
+            <div class="member d-flex justify-content-around" style ="max-width:80% !important; max-height:90% !important;">
               <%= image_tag('dummy.webp', class: 'teampic img-fluid', alt: 'staff') %>
               <div class="member-info">
                 <h4>Mr. Santosh</h4>
@@ -246,7 +264,9 @@ font-size: 100px;
               </div>
             </div>
           </div>
+          </div>
 
+          <div>
           <!-- Project Lead -->
           <div class="section-title mt-5">
             <h3>Project Lead</h3>
@@ -254,7 +274,7 @@ font-size: 100px;
           </div>
 
           <div class="row justify-content-center">
-            <div class="member d-flex justify-content-between">
+            <div class="member d-flex justify-content-around" style ="max-width:80% !important; max-height:90% !important;">
               <%= image_tag('Anish.jpg', class: 'teampic img-fluid', alt: 'Project Lead') %>
               <div class="member-info">
                 <h4>Anish Kumbhar</h4>
@@ -266,6 +286,8 @@ font-size: 100px;
                 </div>
               </div>
             </div>
+          </div>
+          </div>
           </div>
 
           <!-- Web Development Team -->
@@ -310,8 +332,8 @@ font-size: 100px;
                 <span>B.Tech, 2026</span>
                 <span>Dept. of CSE</span>
                 <div class="social justify-content-center">
-                  <a href="https://github.com/Poorvab2525" class ="github-icon"><i class="fa-brands fa-square-github fa-2xl" style="color: #000000;"></i></a>
-                  <a href="https://github.com/Poorvab2525" class ="github-icon"><i class="fa-brands fa-linkedin fa-2xl" style="color: #74C0FC;"></i></a>
+                  <a href="https://github.com/Reema-murthy" class ="github-icon"><i class="fa-brands fa-square-github fa-2xl" style="color: #000000;"></i></a>
+                  <a href="https://www.linkedin.com/in/reema-murthy" class ="github-icon"><i class="fa-brands fa-linkedin fa-2xl" style="color: #74C0FC;"></i></a>
                 </div>
               </div>
           </div>
@@ -398,6 +420,7 @@ font-size: 100px;
       background-color: #06692cf9;
       color: #fff;
     }
+
   </style>
   </head>
   <body>
