--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -20,6 +20,14 @@ img{
   height: auto;
 }
 
+.telephone-lines {
+  display: flex;
+  justify-content: center;
+  width:100%;
+  box-shadow: 0px 11px 5px -1px rgba(0, 0, 0, 0.3);
+  height: auto;
+}
+
 .py-3 {
     padding-top: 0.5rem!important;
     padding-bottom: 0.5rem!important;
