--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -29,6 +29,9 @@
         <% end %>
     </div>
   </header>
+  <div class="telephone-lines">
+      <h6>Institute Lines : +91-824-2474000 to 4006 (7 Lines)</h6>
+  </div>
 </div>
 
 
