--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -30,7 +30,7 @@
     </div>
   </header>
   <div class="telephone-lines">
-      <h6>Institute Lines : +91-824-2474000 to 4006 (7 Lines)</h6>
+      <h6><b>Institute Lines : +91-824-2474000 to 4006 (7 Lines)</b></h6>
   </div>
 </div>
 
