--- a/app/assets/stylesheets/topbutton.css
+++ b/app/assets/stylesheets/topbutton.css
@@ -1,6 +1,6 @@
 #button {
   display: inline-block;
-  background-color: rgba(25, 46, 89, 255);
+  background-color: #FBA834;
   width: 50px;
   height: 50px;
   text-align: center;
