--- a/app/views/complaints/index.html.erb
+++ b/app/views/complaints/index.html.erb
@@ -142,6 +142,7 @@
                 </div>
                 <% end %>
               </div>
+              </div>
             <% end %>
           </div>
         </div>
