--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -32,9 +32,10 @@
           <%= link_to "Print", faculties_print_path(format: :pdf, user_id: current_user.id), class: "btn" %>
         </div>
         <% end %>
-        <% if current_user.present? %>
+        <% if current_user.present?  %>
         <div class="overlay-contact">
-          <%= link_to 'Log Out', home_team_path, class: "nav-link px-2 text-body-secondary home-link" %>
+          <%= link_to 'Log Out',destroy_user_session_path,
+              method: :delete, class: "nav-link px-2 text-body-secondary home-link" %>
         </div>
         <% end %>
     </div>
